# Dressly

./: SYSTEM_DESIGN.md  codemagic.yaml  docker-compose.yml
.github/workflows/: build-apk.yml  ci-cd.yml
backend/: .env  .env.example  Cargo.toml  Dockerfile
backend/benches/: api_benchmarks.rs
backend/src/: lib.rs  main.rs
backend/src/api/: mod.rs  response.rs
backend/src/api/handlers/: admin_handler.rs  ai_handler.rs  auth_handler.rs  health_handler.rs  mod.rs  notification_handler.rs  subscription_handler.rs  user_handler.rs  wardrobe_handler.rs  ws_handler.rs
backend/src/api/middleware/: auth_middleware.rs  mod.rs
backend/src/api/routes/: mod.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/db/migrations/: 001_initial_schema.sql  migrations_runner.rs  mod.rs
backend/src/db/models/: admin_config.rs  generation.rs  mod.rs  notification.rs  payment.rs  session.rs  subscription.rs  user.rs  wardrobe.rs
backend/src/db/repositories/: admin_config_repo.rs  generation_repo.rs  mod.rs  notification_repo.rs  payment_repo.rs  session_repo.rs  subscription_repo.rs  user_repo.rs  wardrobe_repo.rs
backend/src/errors/: mod.rs
backend/src/services/: mod.rs  redis_service.rs
backend/src/services/ai/: mod.rs
backend/src/services/auth/: mod.rs
backend/src/services/notification/: mod.rs
backend/src/services/payment/: mod.rs
backend/src/services/websocket/: mod.rs
backend/src/utils/: helpers.rs  mod.rs
backend/src/workers/: mod.rs  subscription_worker.rs
backend/tests/: test_ai_notification_service.rs  test_auth_service.rs  test_config.rs  test_errors.rs  test_extended_backend.rs  test_helpers.rs  test_integration.rs  test_models.rs  test_payment_service.rs  test_proptest.rs  test_websocket.rs
backend/tests/common/: mod.rs
infra/: prometheus.yml
infra/k8s/: backend-deployment.yaml  config.yaml  namespace.yaml
mobile/: app.json  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
mobile_flutter/: README.md  analysis_options.yaml  pubspec.yaml
mobile_flutter/ios/: Podfile
nmm/: index.js  package-lock.json  package.json
web/: package-lock.json  package.json
web/public/: index.html  (+1 more)
(+155 files in other folders)
